[metadata]
name = apisec
version = 1.0
description = API Security Testing Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vkvbit/apisec
download_url = https://github.com/vkvbit/apisec/archive/refs/tags/1.0.zip
author = Vaibhav Kumar
author_email = myselfv@hotmail.com
license = MIT
keywords = apisec, rest, graphql, soap, restful, api, security, scanner, tool, vulnerability
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    offat
    argparse

[options.entry_points]
console_scripts =
    apisec = apisec.__main__:main
